deploy/k8s/08-docker-registry/docker-registry-manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: docker-registry
  namespace: devops
  labels:
    app: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: docker-registry
          image: "registry:2.7.1"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/registry
            - serve
            - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry/
            - name: "docker-registry-config"
              mountPath: "/etc/docker/registry"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-docker-registry-data
        - name: docker-registry-config
          configMap:
            name: docker-registry-config

---
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: devops
  labels:
    app: docker-registry
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
    - port: 5000
      protocol: TCP
      name: http-5000
      targetPort: 5000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docker-registry
  namespace: devops
  labels:
    app: docker-registry
spec:
  ingressClassName: nginx-private
  rules:
    - host: docker-registry.k8s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
